# chrome_keying

./: CMakeLists.txt  alignment.h  chrome_keying.cpp  chrome_keying.h  compute_kernels.h  convolution.cpp  filter.h  helper.cpp  helper.h  image.h  main.cpp
common/: compute_kernels.cpp  compute_kernels_default.h  filter.h  helper.cpp  helper.h
opencl/: compute_kernels.cpp  compute_kernels.h  device_setup.cpp  device_setup.h  main.cpp  opencl_helper.cpp  opencl_helper.h  opencl_kernels.cl  program_title.h
simd/: chrome_keying.cpp  compute_kernels.h  convolution.cpp  main.cpp  program_title.h
